# nutrition-tracking

./: .gitignore  nutrient_requirement_map.csv  recipe.nu  requirements_postprocess.nu  requirements_scrape.nu  shell.nix  shell.nu  state_migrate.nu  state_schema.sql  tasks.md  usda_db_load_tables.nu  usda_schema.sql
lib/: dri.nu  state.nu  unit.nu
pdf_parse/: camelot-parse.py  main.py  pdfplumber-parse.py  pyproject.toml  shell.nix  vllm.sh
ui/: create-recipe.sql  index.sql  recipe.sql  user.sql
ui/sqlpage/: sqlpage.json
